# pygbm

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
pygbm/: __init__.py  base.py  cli.py  gbm_simulation.py  version.py
