[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygbm"
version = "0.1.0"
description = "Python package for geometric Brownian motion simulations"
authors = [{name = "Alexander Blake Martín", email = "alexbm173@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
]

[project.scripts]
pygbm = "pygbm.cli:main"